fix overflow body mobile + project page

--- a/styles/scss/components/_projects.scss
+++ b/styles/scss/components/_projects.scss
@@ -25,13 +25,16 @@
   user-select: none;
   .swiper {
     width: 100%;
-    height: 500px;
+    height: calc(100% - 3rem);
     margin-top: 3rem;
-    overflow: visible;
+    .swiper-wrapper {
+      align-items: center;
+    }
     .swiper-slide {
       position: relative;
       transform: scale(0.75) translate(0, 0);
       transition: 0.5s transform ease;
+      height: 500px;
       a {
         display: block;
         height: 100%;
@@ -140,7 +143,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    bottom: -3rem;
+    bottom: 2rem;
     .progress-bar {
       width: 50%;
       height: 1px;
